--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/fiber": "^9.1.0",
+    "@types/three": "^0.177.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -58,10 +59,11 @@
     "react-live-clock": "^6.1.25",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "resend": "^4.5.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.174.0",
+    "three": "^0.177.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
