--- a/package.json
+++ b/package.json
@@ -44,14 +44,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "cobe": "^0.6.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
+    "lineicons": "^1.3.2",
+    "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.479.0",
     "motion": "^12.6.2",
     "next": "15.2.1",
-    "next-themes": "^0.4.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
