--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "motion": "^12.6.2",
     "next": "15.2.1",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.37.7",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
@@ -67,7 +68,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.177.0",
+    "three": "^0.180.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
